Correcting dahsboard display on small screens

--- a/web/style/scss/_main.scss
+++ b/web/style/scss/_main.scss
@@ -81,16 +81,6 @@ body {
     align-self: end;
 }
 
-.back-button {
-    cursor: pointer;
-    border: 0px solid rgba(0, 0, 0, 0.06);
-}
-
-.logo-back {
-    width: 50px;
-    height: 50px;
-}
-
 .infos__items {
     list-style: none;
     border: 1px solid rgba(0, 0, 0, 0.1);
